force-app/main/default/objects/ssot__InsurancePolicyCoverage__dlm/fields/ssot__CoverageLimitRange__c.field-meta.xml
<CustomField>
    <fullName>ssot__CoverageLimitRange__c</fullName>
    <label>Coverage Limit Range</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CoverageLimitRange</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>