force-app/main/default/objects/ssot__InsurancePolicyCoverage__dlm/fields/ssot__IncomeOptionType__c.field-meta.xml
<CustomField>
    <fullName>ssot__IncomeOptionType__c</fullName>
    <label>Income Option Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IncomeOptionType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>