force-app/main/default/objects/ssot__InsurancePolicyCoverage__dlm/fields/ssot__InsurancePolicyAssetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InsurancePolicyAssetId__c</fullName>
    <label>Insurance Policy Asset</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InsurancePolicyAssetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>