force-app/main/default/objects/ssot__InsurancePolicyCoverage__dlm/fields/ssot__LimitAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__LimitAmount__c</fullName>
    <label>Limit Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LimitAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>