force-app/main/default/objects/ssot__InsurancePolicyCoverage__dlm/fields/ssot__LimitDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LimitDateTime__c</fullName>
    <label>Limit Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LimitDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>