force-app/main/default/objects/ssot__InsurancePolicyCoverage__dlm/fields/ssot__LimitPercentage__c.field-meta.xml
<CustomField>
    <fullName>ssot__LimitPercentage__c</fullName>
    <label>Limit Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LimitPercentage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>