force-app/main/default/objects/ssot__InsurancePolicyCoverage__dlm/fields/ssot__TotalStandardAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalStandardAmount__c</fullName>
    <label>Total Standard Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalStandardAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>